scripts/nightly/PKGEVAL_BlossomV_add.log
INFO: Cloning cache of BlossomV from git://github.com/mlewe/BlossomV.jl.git
INFO: Installing BlossomV v0.0.1
INFO: Building BlossomV

WARNING: deprecated syntax "[a=>b, ...]" at /home/vagrant/.julia/v0.4/BlossomV/deps/build.jl:28.
Use "Dict(a=>b, ...)" instead.
INFO: Attempting to Create directory /home/vagrant/.julia/v0.4/BlossomV/deps/downloads
INFO: Downloading file http://pub.ist.ac.at/~vnk/software/blossom5-v2.04.src.tar.gz
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100 47427  100 47427    0     0  49178      0 --:--:-- --:--:-- --:--:-- 49147
INFO: Done downloading file http://pub.ist.ac.at/~vnk/software/blossom5-v2.04.src.tar.gz
INFO: Attempting to Create directory /home/vagrant/.julia/v0.4/BlossomV/deps/src
INFO: Attempting to Create directory /home/vagrant/.julia/v0.4/BlossomV/deps
INFO: Directory /home/vagrant/.julia/v0.4/BlossomV/deps already created
INFO: Changing Directory to /home/vagrant/.julia/v0.4/BlossomV/deps/src/blossom5-v2.04.src
INFO: Attempting to Create directory /home/vagrant/.julia/v0.4/BlossomV/deps/usr/lib
patching file Makefile
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  example.cpp -c -o example.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  interface.cpp -c -o interface.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  misc.cpp -c -o misc.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMduals.cpp -c -o PMduals.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMexpand.cpp -c -o PMexpand.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMinit.cpp -c -o PMinit.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMinterface.cpp -c -o PMinterface.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMmain.cpp -c -o PMmain.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMrepair.cpp -c -o PMrepair.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMshrink.cpp -c -o PMshrink.o
interface.cpp: In function ‘matching* matching_construct(int32_t, int32_t)’:
interface.cpp:25:14: error: ‘make_unique’ is not a member of ‘std’
     result = std::make_unique<matching>(node_num, edge_num_max).release();
              ^
interface.cpp:25:39: error: expected primary-expression before ‘>’ token
     result = std::make_unique<matching>(node_num, edge_num_max).release();
                                       ^
interface.cpp:25:65: error: request for member ‘release’ in ‘(0, edge_num_max)’, which is of non-class type ‘int32_t {aka int}’
     result = std::make_unique<matching>(node_num, edge_num_max).release();
                                                                 ^
make: *** [interface.o] Error 1
make: *** Waiting for unfinished jobs....
==============================[ ERROR: BlossomV ]===============================

LoadError: failed process: Process(setenv(`make -j8 all`,Union{ASCIIString,UTF8String}["PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/","PWD=/vagrant/nightly","SHELL=/bin/bash","SSH_CONNECTION=10.0.2.2 46002 10.0.2.15 22","MAIL=/var/mail/vagrant","LANG=en_US.UTF-8","SHLVL=3","LOGNAME=vagrant","XDG_RUNTIME_DIR=/run/user/1000","XDG_SESSION_ID=3","OLDPWD=/home/vagrant","SSH_CLIENT=10.0.2.2 46002 22","_=/usr/bin/timeout","USER=vagrant","TERM=vt100","HOME=/home/vagrant","OPENBLAS_MAIN_FREE=1","JAVA_HOME=/usr/lib/jvm/java-7-oracle"]), ProcessExited(2)) [2]
while loading /home/vagrant/.julia/v0.4/BlossomV/deps/build.jl, in expression starting on line 28

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: BlossomV had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.4
 - build the package(s) and all dependencies with `Pkg.build("BlossomV")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated
